...
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif"
            android:text="Ingredients:"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ingRecyclerView"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="175dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ing_tv" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recepieStepsRv"
            android:layout_width="match_parent"
            android:layout_height="318dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
