<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--<GridView-->
        <!--android:id="@+id/baking_grid_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:numColumns="1"-->
        <!--android:verticalSpacing="25dp"-->
        <!--android:horizontalSpacing="30dp"-->
        <!--android:gravity="center"-->
        <!--android:columnWidth="150dp"-->
        <!--android:stretchMode="columnWidth"-->
        <!--android:padding="60dp"-->
        <!--android:textAlignment="center"-->


    <!--&gt;</GridView>-->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recepieItemRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_marginTop="50dp"
        android:padding="5dp"
        android:scrollbars="vertical"/>

    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/navigation"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="0dp"-->
        <!--android:layout_marginStart="0dp"-->
        <!--android:background="?android:attr/windowBackground"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:menu="@menu/navigation" />-->

</android.support.constraint.ConstraintLayout>